fixed activity spacing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -227,6 +227,7 @@ button {
 
 .activity {
     /* background-color: aliceblue; */
+    height: 3rem;
     width: 70%;
     padding-top: 0.5rem;
 }
